--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
     "morgan": "^1.10.0",
+    "nanoid": "^3.1.12",
     "nodemon": "^2.0.4",
     "socket.io": "^2.3.0"
   }
