--- a/.gitignore
+++ b/.gitignore
@@ -266,6 +266,10 @@ fabric.properties
 # .idea/misc.xml
 # *.ipr
 
+# certificates
+*.crt
+*.key
+
 # Sonarlint plugin
 # https://plugins.jetbrains.com/plugin/7973-sonarlint
 .idea/**/sonarlint/
