--- a/.gitignore
+++ b/.gitignore
@@ -139,6 +139,9 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+# vscode
+.vscode
+
 ### react ###
 .DS_*
 **/*.backup.*
