--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,6 +19,7 @@
     "helmet": "^4.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "shared": "^1.0.0",
     "socket.io": "^3.0.0"
   },
   "devDependencies": {
