--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,11 +14,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "typescript": "^4.1.5",
-    "web-vitals": "^0.2.4",
+    "react-scripts": "4.0.2",
+    "shared": "1.0.0",
     "socket.io": "^3.0.0",
-    "socket.io-client": "^3.0.0"
+    "socket.io-client": "^3.0.0",
+    "typescript": "^4.1.5",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "dev": "react-scripts start",
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "type-fest": "^0.21.2"
   }
 }
